Fixing z-indexes

--- a/client/styles/components/_drag-n-drop.scss
+++ b/client/styles/components/_drag-n-drop.scss
@@ -2,8 +2,9 @@
   background: #5f85a9;
   color: white;
   width:60px;
-  height: 30px;
+  height: auto;
   float: left;
+  margin: 10px;
 }
 
 .droppable__zone{
